--- a/imgurexport/CMakeLists.txt
+++ b/imgurexport/CMakeLists.txt
@@ -1,47 +1,52 @@
-SUBDIRS(icons)
+#
+# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-INCLUDE_DIRECTORIES(${QJSON_INCLUDE_DIR})
+subdirs(icons)
 
-SET(kipiplugin_imgurexport_PART_SRCS
+include_directories(${QJSON_INCLUDE_DIR})
+
+set(kipiplugin_imgurexport_PART_SRCS
     plugin_imgurexport.cpp
     imgurtalker.cpp
     imgurwidget.cpp
     imgurwindow.cpp
     imgurimageslist.cpp
     mpform.cpp
-)
+   )
 
-IF(QTKOAUTH_FOUND)
-    INCLUDE_DIRECTORIES(${QTKOAUTH_INCLUDE_DIR})
-    ADD_DEFINITIONS(
-                    -DOAUTH_ENABLED
+if(QTKOAUTH_FOUND)
+    include_directories(${QTKOAUTH_INCLUDE_DIR})
+    add_definitions(-DOAUTH_ENABLED
                     ${QTKOAUTH_DEFINITIONS}
-    )
+                   )
 
-    SET(kipiplugin_imgurexport_PART_SRCS
+    set(kipiplugin_imgurexport_PART_SRCS
         ${kipiplugin_imgurexport_PART_SRCS}
         imgurtalkerauth.cpp
-    )
-ENDIF()
+       )
+endif()
 
 KDE4_ADD_PLUGIN(kipiplugin_imgurexport ${kipiplugin_imgurexport_PART_SRCS})
 
-TARGET_LINK_LIBRARIES(kipiplugin_imgurexport
+target_link_libraries(kipiplugin_imgurexport
                       ${KIPI_LIBRARIES}
                       ${KDE4_KIO_LIBS}
                       ${KEXIV2_LIBRARIES}
                       ${QJSON_LIBRARIES}
                       kipiplugins
-)
+                     )
 
-IF(QTKOAUTH_FOUND)
-    TARGET_LINK_LIBRARIES(kipiplugin_imgurexport
+if(QTKOAUTH_FOUND)
+    target_link_libraries(kipiplugin_imgurexport
                           ${QTKOAUTH_LIBRARIES}
-    )
-ENDIF()
+  )
+endif()
 
-CONFIGURE_FILE(kipiplugin_imgurexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_imgurexport.desktop)
+configure_file(kipiplugin_imgurexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_imgurexport.desktop)
 
-INSTALL(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_imgurexport.desktop DESTINATION ${SERVICES_INSTALL_DIR})
-INSTALL(TARGETS kipiplugin_imgurexport                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-INSTALL(FILES   kipiplugin_imgurexportui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_imgurexport.desktop DESTINATION ${SERVICES_INSTALL_DIR})
+install(TARGETS kipiplugin_imgurexport                                     DESTINATION ${PLUGIN_INSTALL_DIR})
+install(FILES   kipiplugin_imgurexportui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
