--- a/removeredeyes/test/CMakeLists.txt
+++ b/removeredeyes/test/CMakeLists.txt
@@ -1,18 +1,24 @@
-IF (NOT WIN32)
+#
+# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../plugin
+if(NOT WIN32)
+
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../plugin
                         ${CMAKE_CURRENT_SOURCE_DIR}/../libcvblobs
                         ${OpenCV_INCLUDE_DIR}
                        )
 
-    SET(testipp_SRCS testForIPP.cpp)
+    set(testipp_SRCS testForIPP.cpp)
 
     KDE4_ADD_EXECUTABLE(testipp NOGUI
                         ${testipp_SRCS}
                        )
 
-    TARGET_LINK_LIBRARIES(testipp
+    target_link_libraries(testipp
                           ${OpenCV_LIBRARIES}
                          )
 
-ENDIF()
+endif()
