--- a/tests/multithreading/CMakeLists.txt
+++ b/tests/multithreading/CMakeLists.txt
@@ -1,31 +1,14 @@
-# ===========================================================
 #
-# This file is a part of digiKam project
-# <a href="http://www.digikam.org">http://www.digikam.org</a>
+# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
-# @date   2011-12-28
-# @brief  threadweaver api test application
-#
-# @author Copyright (C) 2011-2012 by A Janardhan Reddy <annapareddyjanardhanreddy at gmail.com>
-#
-# This program is free software; you can redistribute it
-# and/or modify it under the terms of the GNU General
-# Public License as published by the Free Software Foundation;
-# either version 2, or (at your option)
-# any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-# GNU General Public License for more details.
-#
-# ============================================================
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-SET(THREADWEAVER_FOUND ${KDE4_THREADWEAVER_LIBRARIES})
+set(THREADWEAVER_FOUND ${KDE4_THREADWEAVER_LIBRARIES})
 
-IF(THREADWEAVER_FOUND)
+if(THREADWEAVER_FOUND)
 
-    INCLUDE_DIRECTORIES(${KDE4_INCLUDES}
+    include_directories(${KDE4_INCLUDES}
                         ${JPEG_INCLUDE_DIR}
                         ${QT_INCLUDE_DIR}
                         ${QT_QTCORE_INCLUDE_DIR}
@@ -34,7 +17,7 @@ IF(THREADWEAVER_FOUND)
                         ${CMAKE_CURRENT_SOURCE_DIR}/../../jpeglossless/libjpeg
                        )
 
-    SET(multithread_SRCS
+    set(multithread_SRCS
         main.cpp
         imageselector.cpp
         ../../jpeglossless/transform/convert2grayscale.cpp
@@ -48,7 +31,7 @@ IF(THREADWEAVER_FOUND)
 
     KDE4_ADD_EXECUTABLE(multithread ${multithread_SRCS})
 
-    TARGET_LINK_LIBRARIES(multithread
+    target_link_libraries(multithread
                           ${QT_QTGUI_LIBRARY}
                           ${QT_AND_KDECORE_LIBS}
                           ${KDE4_KPARTS_LIBS}
@@ -60,4 +43,4 @@ IF(THREADWEAVER_FOUND)
                           kipiplugins
                          )
 
-ENDIF()
+endif()
