--- a/videoslideshow/magickiface/CMakeLists.txt
+++ b/videoslideshow/magickiface/CMakeLists.txt
@@ -1,29 +1,35 @@
-ADD_SUBDIRECTORY(test)
+#
+# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-INCLUDE_DIRECTORIES(${ImageMagick_INCLUDE_DIRS}
+add_subdirectory(test)
+
+include_directories(${ImageMagick_INCLUDE_DIRS}
                     ${QT_INCLUDES}
                     ${KDE4_INCLUDES}
                     ${CMAKE_BINARY_DIR}
                    )
 
-SET(magickiface_SRCS
+set(magickiface_SRCS
     magickiface.cpp
     processimage.cpp
    )
 
-FOREACH(_currentfile ${magickiface_SRCS})
-    IF(NOT MSVC)
-        SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-    ENDIF()
-ENDFOREACH(_currentfile ${magickiface_SRCS})
+foreach(_currentfile ${magickiface_SRCS})
+    if(NOT MSVC)
+        set_source_files_properties(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
+    endif()
+endforeach(_currentfile ${magickiface_SRCS})
 
 KDE4_ADD_LIBRARY(magickiface STATIC ${magickiface_SRCS})
 
-IF(NOT MSVC)
-    SET_TARGET_PROPERTIES(magickiface PROPERTIES COMPILE_FLAGS "-fPIC")
-ENDIF()
+if(NOT MSVC)
+    set_target_properties(magickiface PROPERTIES COMPILE_FLAGS "-fPIC")
+endif()
 
-TARGET_LINK_LIBRARIES(magickiface
+target_link_libraries(magickiface
                       ${QT_QTGUI_LIBRARY}
                       ${KDE4_KDECORE_LIBS}
                       ${ImageMagick_LIBRARIES}
