--- a/dlnaexport/extra/hupnp_av/CMakeLists.txt
+++ b/dlnaexport/extra/hupnp_av/CMakeLists.txt
@@ -257,7 +257,7 @@ foreach(_currentfile ${SRCS})
     if(NOT MSVC)
         set_source_files_properties(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
     endif()
-endforeach(_currentfile ${SRCS})
+endforeach()
 
 add_library(HUpnpAv STATIC ${SRCS})
 
