--- a/dlnaexport/extra/qtsoap/CMakeLists.txt
+++ b/dlnaexport/extra/qtsoap/CMakeLists.txt
@@ -20,7 +20,7 @@ foreach(_currentfile ${SRCS})
     if(NOT MSVC)
         set_source_files_properties(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
     endif()
-endforeach(_currentfile ${SRCS})
+endforeach()
 
 add_library(QtSoap STATIC ${SRCS})
 
