--- a/photolayoutseditor/extra/qtpropertybrowser/CMakeLists.txt
+++ b/photolayoutseditor/extra/qtpropertybrowser/CMakeLists.txt
@@ -110,7 +110,7 @@ foreach(_currentfile ${SRCS})
     if(NOT MSVC)
         set_source_files_properties(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
     endif()
-endforeach(_currentfile ${SRCS})
+endforeach()
 
 add_library(PropertyBrowser STATIC ${SRCS})
 
