new test application to rotate image to 90 degrees This code permit to check KIPIPlugins::KPToolDialog, KIPIPlugins::KPImagesList, KIPIPlugins::KPAboutData, KDcraw::RActionThreadBase, and KDcraw::RActionJob

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -332,9 +332,15 @@ if(KF5Kipi_FOUND)
 #         add_definitions(-DAREA_CODE_LOADING=${AREA_CODE_LOADING})
 #         add_definitions(-DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS)
 
-        # Plugins which will be always compiled
 
         add_subdirectory(common)
+
+        if (BUILD_TESTING)
+            add_subdirectory(tests)
+        endif()
+        
+        # Plugins which will be always compiled
+
 #         add_subdirectory(timeadjust)
 #         add_subdirectory(jpeglossless)
 #         add_subdirectory(rawconverter)
