generate kipiplugins lib export file automatically with ECM

--- a/common/libkipiplugins/CMakeLists.txt
+++ b/common/libkipiplugins/CMakeLists.txt
@@ -36,6 +36,8 @@ set(kipiplugins_LIB_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/tools/kipiplugins_debug.cpp
 
 add_library(KF5kipiplugins SHARED ${kipiplugins_LIB_SRCS})
 
+generate_export_header(KF5kipiplugins BASE_NAME kipiplugins EXPORT_MACRO_NAME KIPIPLUGINS_EXPORT)
+
 target_link_libraries(KF5kipiplugins
 
                       PRIVATE
